@@ -1,3 +1,7 @@
+Mon, Jan 19, 2008
+---------------------------------------------------------------------
+- Improved login/logout flash messages.
+
 Sun, Jan 18, 2008
 ---------------------------------------------------------------------
 - More fine tuning of plugins and callback hooks.
